--- a/views/insidePost.ejs
+++ b/views/insidePost.ejs
@@ -54,6 +54,7 @@
             <p id="postContent"><%= text  %></p>
         </div>
 
+
         <!-- Image display IF post has image -->
         <% if (photoUrl) { %>
             <div class="mb-3">
@@ -62,8 +63,11 @@
         <% } %>
         <p class="text-muted" id="postDate"><%= createdAt  %></p>
         <button onclick="likePost()" id="likebutton" class="btn btn-outline-primary">Like this post</button>
-
-
+       
+        <!-- If it is the authorthere will be an edit button -->
+        <% if (isAuthor) { %>
+            <a href="/postEdit/<%= postID %>/edit" class="btn btn-primary">Edit</a>
+          <% } %>
 
         <!-- Comment Section -->
         <div class="container mt-4">
@@ -75,10 +79,9 @@
                         <a href="/<%= commentUserMap[comment.userId.toString()] %>" style="font-weight: bolder;"> <%= commentUserMap[comment.userId.toString()] %></a>
                         <p> <%= comment.text %> </p> 
                         <small> <%= comment.createdAt %> </small>                
-               
+                    </div>
                         <% } %>
-            <% } %>
-        </div>
+            <% } %>   
     </div>
     <div id="postError" class="alert alert-danger d-none"></div>
 
