--- a/views/insidePost.ejs
+++ b/views/insidePost.ejs
@@ -102,5 +102,6 @@
     <script src="/js/skeleton.js"></script>
     <script src="/js/main.js"></script>
     <script src="/js/footer.js"></script>
+    <script src="/js/navbar.js"></script>
 </body>
 </html>
