--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -14,10 +14,20 @@
     <!------------------------------------------>
     <!-- Bootstrap Library CSS JS CDN go here -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <!-- MDB CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.0/mdb.min.css" rel="stylesheet" />
+
+    <!-- Font Awesome for icons -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
+
+    <!-- MDB JS -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.3.0/mdb.min.js"></script>
+
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.bundle.min.js"></script>
+
    
     <!------------------------------------------>
 
@@ -46,8 +56,84 @@
    
 
     <!-- the body of your page goes here -->
-    yooo this is someone elses profile but its a placeholder good job
-  
+    <!-- yooo this is someone elses profile but its a placeholder good job -->
+    <div class="row py-5 px-4">
+        <div class="col-md-5 mx-auto">
+            <div class="bg-white shadow rounded overflow-hidden">
+                <div class="px-4 pt-0 pb-4 cover">
+                    <div class="media align-items-end profile-head">
+                        <div class="profile mr-3">
+                            <img id="profileAvatar" src="<%= user.avatar || '/img/default-avatar.png' %>" width="130" class="rounded mb-2">
+                            <!-- <a href="/editProfile" class="btn btn-outline-dark btn-sm btn-block">Edit profile</a> -->
+                        </div>
+                        <div class="media-body mb-5 text-white">
+                            <h4 class="mt-0 mb-0"><%= user.name %></h4>
+                            <p class="small mb-4">
+                                <i class="fas fa-map-marker-alt mr-2"></i><%= user.location %>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="bg-light p-4 d-flex justify-content-end text-center">
+                    <ul class="list-inline mb-0">
+                        <li class="list-inline-item">
+                            <h5 class="font-weight-bold mb-0 d-block">215</h5>
+                            <small class="text-muted">
+                                <i class="fas fa-image mr-1"></i>
+                                <a href="#">Likes&Col</a>
+                            </small>
+                        </li>
+                        <li class="list-inline-item">
+                            <h5 class="font-weight-bold mb-0 d-block">745</h5>
+                            <small class="text-muted">
+                                <i class="fas fa-user mr-1"></i>
+                                <a href="/followers">Followers</a>
+                            </small>
+                        </li>
+                        <li class="list-inline-item">
+                            <h5 class="font-weight-bold mb-0 d-block">340</h5>
+                            <small class="text-muted">
+                                <i class="fas fa-user mr-1"></i>
+                                <a href="/following">Following</a>
+                            </small>
+                        </li>
+                    </ul>
+                </div>
+                <div>
+                    <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-rounded btn-sm"
+                      data-mdb-ripple-color="dark">+ Follow</button>
+                    <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating btn-sm"
+                      data-mdb-ripple-color="dark"><i class="fas fa-comment"></i></button>
+                </div>
+                <div class="px-4 py-3">
+                    <h5 class="mb-0">About me</h5>
+                    <div class="p-4 rounded shadow-sm bg-light">
+                        <p class="font-italic mb-0"><%= user.bio %></p>
+                    </div>
+                </div>
+                <div class="py-4 px-4">
+                    <div class="d-flex align-items-center justify-content-between mb-3">
+                        <h5 class="mb-0">Recent Posts</h5>
+                        <a href="#" class="btn btn-link text-muted">Show all</a>
+                    </div>
+                    <div class="row" id="postContainer">
+                        <% posts.forEach(post => { %>
+                            <div class="col-md-4 mb-3">
+                                <div class="card">
+                                    <img class="card-img-top" src="<%= post.photeUrl %>" alt="Post image">
+                                    <div class="card-body">
+                                        <h5 class="card-title"><%= post.title %></h5>
+                                        <p class="card-text"><%= post.text %></p>
+                                        <a href="/posts/<%= post._id %>" class="btn btn-primary">View</a>
+                                    </div>
+                                </div>
+                            </div>
+                        <% }) %>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- our own footer goes here -->
     <nav id="footerPlaceholder"></nav>
     <!-- ------------------------------------------
