--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -43,80 +43,87 @@
 
     <!-- navbar -->
     <nav id="navbarPlaceholder"></nav>
-   
-
     <!-- the body of your page goes here -->
     <div class="row py-5 px-4">
-        <div class="col-md-5 mx-auto">
-         
+      <div class="col-md-5 mx-auto">
           <div class="bg-white shadow rounded overflow-hidden">
-            <div class="px-4 pt-0 pb-4 cover">
-              <div class="media align-items-end profile-head">
-                <div class="profile mr-3">
-                  <img id="profileAvatar" src="/img/default-avatar.png" width="130"  class="rounded mb-2"></img> 
-                  <a href="/editProfile" class="btn btn-outline-dark btn-sm btn-block">Edit profile</a>
-                </div>
-                <div class="media-body mb-5 text-white">
-                  <h4 class="mt-0 mb-0"><span id="name"></span></h4>
-                  <p class="small mb-4">
-                    <i id="userLocation" class="fas fa-map-marker-alt mr-2"></i><span id="location"></span>
-                  </p>
-                </div>
+              <div class="px-4 pt-0 pb-4 cover">
+                  <div class="media align-items-end profile-head">
+                      <div class="profile mr-3">
+                          <img id="profileAvatar" src="<%= user.avatar || '/img/default-avatar.png' %>" width="130" class="rounded mb-2">
+                          <a href="/editProfile" class="btn btn-outline-dark btn-sm btn-block">Edit profile</a>
+                      </div>
+                      <div class="media-body mb-5 text-white">
+                          <h4 class="mt-0 mb-0"><%= user.name %></h4>
+                          <p class="small mb-4">
+                              <i class="fas fa-map-marker-alt mr-2"></i><%= user.location %>
+                          </p>
+                      </div>
+                  </div>
               </div>
-            </div>
-            <div class="bg-light p-4 d-flex justify-content-end text-center">
-              <ul class="list-inline mb-0">
-                <li class="list-inline-item">
-                  <h5 class="font-weight-bold mb-0 d-block">215</h5>
-                  <small class="text-muted">
-                    <i class="fas fa-image mr-1"></i>
-                    <a href="#">Likes&Col</a>
-                  </small>
-                </li>
-                <li class="list-inline-item">
-                  <h5 class="font-weight-bold mb-0 d-block">745</h5>
-                  <small class="text-muted">
-                    <i class="fas fa-user mr-1"></i>
-                    <a href="/followers">Followers</a>
-                  </small>
-                </li>
-                <li class="list-inline-item">
-                  <h5 class="font-weight-bold mb-0 d-block">340</h5>
-                  <small class="text-muted">
-                    <i class="fas fa-user mr-1"></i>
-                    <a href="/following">Following</a>
-                  </small>
-                </li>
-              </ul>
-            </div>
-            <div class="px-4 py-3">
-              <h5 class="mb-0">About me</h5>
-              <div class="p-4 rounded shadow-sm bg-light">
-                <p class="font-italic mb-0"><span id="bio"></span>
+              <div class="bg-light p-4 d-flex justify-content-end text-center">
+                  <ul class="list-inline mb-0">
+                      <li class="list-inline-item">
+                          <h5 class="font-weight-bold mb-0 d-block">215</h5>
+                          <small class="text-muted">
+                              <i class="fas fa-image mr-1"></i>
+                              <a href="#">Likes&Col</a>
+                          </small>
+                      </li>
+                      <li class="list-inline-item">
+                          <h5 class="font-weight-bold mb-0 d-block">745</h5>
+                          <small class="text-muted">
+                              <i class="fas fa-user mr-1"></i>
+                              <a href="/followers">Followers</a>
+                          </small>
+                      </li>
+                      <li class="list-inline-item">
+                          <h5 class="font-weight-bold mb-0 d-block">340</h5>
+                          <small class="text-muted">
+                              <i class="fas fa-user mr-1"></i>
+                              <a href="/following">Following</a>
+                          </small>
+                      </li>
+                  </ul>
               </div>
-            </div>
-            <div class="px-4 py-3" id="dictionary-section">
-                <h5 class="mb-0">Online Dictionary</h5>
-                <div class="mb-3">
-                    <input type="text" id="wordInput" placeholder="Enter a word" class="form-control"/>
-                </div>
-                <button onclick="lookupWord()" class="btn btn-primary mb-3">Search</button>    
-                <div id="definition" class="alert d-none"></div>
-            </div>
-      
-            <div class="py-4 px-4">
-              <div class="d-flex align-items-center justify-content-between mb-3">
-                <h5 class="mb-0">Recent Posts</h5>
-                <a href="#" class="btn btn-link text-muted">Show all</a>
+              <div class="px-4 py-3">
+                  <h5 class="mb-0">About me</h5>
+                  <div class="p-4 rounded shadow-sm bg-light">
+                      <p class="font-italic mb-0"><%= user.bio %></p>
+                  </div>
               </div>
-              <!-- post content goes here -->
-              <div class="row" id="postContainer"></div>
+              <div class="px-4 py-3" id="dictionary-section">
+                  <h5 class="mb-0">Online Dictionary</h5>
+                  <div class="mb-3">
+                      <input type="text" id="wordInput" placeholder="Enter a word" class="form-control" />
+                  </div>
+                  <button onclick="lookupWord()" class="btn btn-primary mb-3">Search</button>
+                  <div id="definition" class="alert d-none"></div>
               </div>
-            </div>
+
+              <div class="py-4 px-4">
+                  <div class="d-flex align-items-center justify-content-between mb-3">
+                      <h5 class="mb-0">Recent Posts</h5>
+                      <a href="#" class="btn btn-link text-muted">Show all</a>
+                  </div>
+                  <div class="row" id="postContainer">
+                      <% posts.forEach(post => { %>
+                          <div class="col-md-4 mb-3">
+                              <div class="card">
+                                  <img class="card-img-top" src="<%= post.photoUrl %>" alt="Post image">
+                                  <div class="card-body">
+                                      <h5 class="card-title"><%= post.title %></h5>
+                                      <p class="card-text"><%= post.text %></p>
+                                      <a href="/posts/<%= post._id %>" class="btn btn-primary">View</a>
+                                  </div>
+                              </div>
+                          </div>
+                      <% }) %>
+                  </div>
+              </div>
           </div>
-        </div>
       </div>
-  
+  </div>
     <!-- our own footer goes here -->
     <nav id="footerPlaceholder"></nav>
     <!-- ------------------------------------------
