--- a/styles/footer.css
+++ b/styles/footer.css
@@ -36,20 +36,20 @@
 }
 
 .footer-item.active {
-    color: #b8e2bb; /* Slightly lighter for active state */
+    color: #b8e2bb; 
 }
 
 .footer-item.active svg {
-    stroke: #b8e2bb; /* Slightly lighter for active state */
+    stroke: #b8e2bb; 
 }
 
 .footer-item:hover {
-    color: #b8e2bb; /* Slightly lighter for hover effect */
+    color: #b8e2bb; 
     transform: scale(1.1);
 }
 
 .footer-item:hover svg {
-    stroke: #b8e2bb; /* Slightly lighter for hover effect */
+    stroke: #b8e2bb; 
     transform: scale(1.1);
 }
 
@@ -60,7 +60,7 @@
 }
 
 .notification-badge {
-  position: absolute;
+  position: relative;
   top: 0;
   right: 0;
   margin-right: 16px; 
@@ -82,12 +82,17 @@
     align-items: center;
 }
 
-.icon-wrap {
-  position: relative;   
-  display: inline-block; 
-}
-
-.icon-wrap .notification-badge {
-  top:   -12px;   
-  right: -2px;
+.footer-item#messagesLink .notification-badge {
+  background-color: #ec35f7;    
+  color: #fff;                 
+  font-size: 10px;             
+  font-weight: bold;          
+  border-radius: 50%;        
+  padding: 2px 6px;             
+  position: absolute;
+  top:   -5px;                  
+  right:  2px;                  
+  
+  transform: scale(0.8);       
+  transform-origin: top right; 
 }
