--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -103,7 +103,6 @@
               <div class="py-4 px-4">
                   <div class="d-flex align-items-center justify-content-between mb-3">
                       <h5 class="mb-0">Recent Posts</h5>
-                      <a href="#" class="btn btn-link text-muted">Show all</a>
                   </div>
                   <div class="row" id="postContainer">
                       <% posts.forEach(post => { %>
@@ -113,7 +112,7 @@
                                   <div class="card-body">
                                       <h5 class="card-title"><%= post.title %></h5>
                                       <p class="card-text"><%= post.text %></p>
-                                      <a href="/posts/<%= post._id %>" class="btn btn-primary">View</a>
+                                      <a href="/post/<%= post._id %>" class="btn btn-primary">View</a>
                                   </div>
                               </div>
                           </div>
