--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -124,7 +124,7 @@
                                     <div class="card-body">
                                         <h5 class="card-title"><%= post.title %></h5>
                                         <p class="card-text"><%= post.text %></p>
-                                        <a href="/yourposts/<%= post._id %>" class="btn btn-primary">View</a>
+                                        <a href="/post/<%= post._id %>" class="btn btn-primary">View</a>
                                     </div>
                                 </div>
                             </div>
