--- a/views/postDetail.ejs
+++ b/views/postDetail.ejs
@@ -52,13 +52,15 @@
     <div class="container mt-5" id="postDetail">
         <div class="card shadow rounded">
           <% if (post.photoUrl) { %>
-            <img src="<%= post.photoUrl %>" class="card-img-top" alt="<%= post.title %>" style="height: 250px; object-fit: cover;" />
+            <img src="<%= post.photoUrl %>" class="card-img-top" alt="<%= post.title %>" style="height: 300px; object-fit: contain;" />
           <% } %>
           <div class="card-body">
             <h4 class="card-title"><%= post.title %></h4>
             <p class="card-text"><%= post.text %></p>
-            <!-- <button onclick="editPost('<%= post._id %>')" class="btn btn-warning">Edit</button>
-            <button onclick="deletePost('<%= post._id %>')" class="btn btn-danger">Delete</button> -->
+            <% if (currentUserId && post.author.toString() === currentUserId.toString()) { %>
+                <a href="/postEdit/<%= post._id %>/edit" class="btn btn-warning">Edit</a>
+                <button onclick="deletePost('<%= post._id %>')" class="btn btn-danger">Delete</button>
+              <% } %>              
           </div>
         </div>
       </div>
@@ -71,7 +73,27 @@
     <script src="/js/profile.js"></script> 
     <script src="/js/skeleton.js"></script>
     <script src="/js/footer.js"></script>
-
+    <script>
+        function deletePost(postId) {
+          if (confirm('Are you sure you want to delete this post?')) {
+            fetch(`/api/post/${postId}`, {
+              method: 'DELETE'
+            })
+            .then(res => {
+              if (res.ok) {
+                alert('Post deleted');
+                window.location.href = '/userProfile'; // 或跳回 main page
+              } else {
+                alert('Failed to delete');
+              }
+            })
+            .catch(err => {
+              console.error('Error deleting post:', err);
+              alert('Error deleting post');
+            });
+          }
+        }
+      </script>      
 </body>
 </html> 
 
