all  most done but i need the edit button show up

--- a/views/postDetail.ejs
+++ b/views/postDetail.ejs
@@ -82,7 +82,7 @@
             .then(res => {
               if (res.ok) {
                 alert('Post deleted');
-                window.location.href = '/userProfile'; // 或跳回 main page
+                window.location.href = '/userProfile'; 
               } else {
                 alert('Failed to delete');
               }
