--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -64,6 +64,7 @@
                       <div class="profile mr-3">
                           <img id="profileAvatar" src="<%= user.avatarUrl || '/img/default-avatar.png' %>" width="130" class="rounded mb-2">
                           <a href="/editProfile" class="btn btn-outline-dark btn-sm btn-block" style="color:aliceblue;">Edit profile</a>
+                          <a href="/logout" class="btn btn-danger btn-sm btn-block mt-2">Logout</a>
                       </div>
                       <div class="media-body mb-5 text-white">
                           <h4 class="mt-0 mb-0"><%= user.name %></h4>
