--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -100,7 +100,7 @@
                     </ul>
                 </div>
                 <div>
-                    <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-rounded btn-sm"
+                    <button href="/follow/<%= user._id %>" type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-rounded btn-sm"
                       data-mdb-ripple-color="dark">+ Follow</button>
                     <button  type="button" data-mdb-button-init data-mdb-ripple-init class="btn btn-outline-dark btn-floating btn-sm"
                       data-mdb-ripple-color="dark"><i class="fas fa-comment"></i></button>
