fix profile post link routes

--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -126,7 +126,7 @@
                                   <div class="card-body">
                                       <h5 class="card-title"><%= post.title %></h5>
                                       <p class="card-text"><%= post.text %></p>
-                                      <a href="/post/<%= post._id %>" class="btn btn-primary">View</a>
+                                      <a href="/<%= user.username %>/post/<%= post._id %>" class="btn btn-primary">View</a>
                                   </div>
                               </div>
                           </div>
