Profile page post image fixed

--- a/views/userProfile.ejs
+++ b/views/userProfile.ejs
@@ -119,19 +119,22 @@
 
                   </div>
                   <div class="row" id="postContainer">
-                      <% posts.forEach(post => { %>
-                          <div class="col-md-4 mb-3">
-                              <div class="card">
-                                  <img class="card-img-top" src="<%= post.photoUrl %>" alt="Post image">
-                                  <div class="card-body">
-                                      <h5 class="card-title"><%= post.title %></h5>
-                                      <p class="card-text"><%= post.text %></p>
-                                      <a href="/<%= user.username %>/post/<%= post._id %>" class="btn btn-primary">View</a>
-                                  </div>
-                              </div>
+                    <% posts.forEach(post => { %>
+                      <div class="col-md-4 mb-3">
+                        <div class="card">
+                          <% if (post.photoUrl) { %>
+                            <img class="card-img-top" src="<%= post.photoUrl %>" alt="Post image">
+                          <% } %>
+                          <div class="card-body">
+                            <h5 class="card-title"><%= post.title %></h5>
+                            <p class="card-text"><%= post.text %></p>
+                            <a href="/<%= user.username %>/post/<%= post._id %>" class="btn btn-primary">View</a>
                           </div>
-                      <% }) %>
+                        </div>
+                      </div>
+                    <% }) %>
                   </div>
+                  
               </div>
           </div>
       </div>
